--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 html,
 body {
   @apply m-0;
+  background: #f4eee4;
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
