--- a/src/components/StartPage/StartPageContent.module.css
+++ b/src/components/StartPage/StartPageContent.module.css
@@ -1,8 +1,28 @@
 .starting {
-  margin: 3rem auto;
-  text-align: center;
+  @apply flex justify-center;
+  @apply text-7xl;
 }
 
-.starting h1 {
-  font-size: 5rem;
+.banner {
+  @apply flex min-w-full justify-center;
+  @apply rounded-b-full bg-white;
+}
+
+.content {
+  @apply flex w-9/12 md:justify-between flex-wrap;
+}
+
+.h1 {
+  @apply md:ml-28 md:mt-28 md:text-justify;
+  /* Pet 伴， 陪伴你的寵物一生 */
+  @apply font-mono text-6xl;
+  line-height: 5rem;
+  color: #464544;
+}
+
+.h2 {
+  /* 毛小孩的就診紀錄整合平台 */
+  @apply font-mono md:text-2xl text-base;
+  line-height: 9rem;
+  color: #464544;
 }
