--- a/src/components/Auth/AuthForm.module.css
+++ b/src/components/Auth/AuthForm.module.css
@@ -3,11 +3,11 @@
   width: 95%;
   max-width: 25rem;
   border-radius: 6px;
-  background-color: #eebb77;
+  background-color: #c4c4c44d;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   padding: 1rem;
   text-align: center;
-  color: white;
+  color: #e4651d;
 }
 
 .auth h1 {
@@ -15,20 +15,33 @@
   color: white;
 }
 
+.title {
+  @apply flex justify-center mb-10;
+  @apply divide-x-4 divide-primary;
+}
+
+.toggleTitle p {
+  @apply text-center ml-5 mr-5 pb-3;
+  @apply text-5xl;
+  border-color: #e4651d;
+  color: #e4651d;
+}
+
 .control {
   margin-bottom: 0.5rem;
 }
 
 .control label {
+  @apply text-left;
   display: block;
-  color: white;
+  color: #464544;
   font-weight: bold;
   margin-bottom: 0.5rem;
 }
 
 .control input {
   font: inherit;
-  background-color: #c0c0ae;
+  background-color: white;
   color: #864e38;
   border-radius: 4px;
   border: 1px solid white;
@@ -45,30 +58,25 @@
 }
 
 .actions button {
-  cursor: pointer;
-  font: inherit;
-  color: white;
-  background-color: #864e38;
-  border: 1px solid #864e38;
-  border-radius: 4px;
+  @apply font-mono text-2xl text-white cursor-pointer rounded-2xl;
+  background-color: #e4a01d;
   padding: 0.5rem 2.5rem;
 }
 
 .actions button:hover {
   color: #864e38;
-  background-color: #c0c0ae;
-  border-color: #864e38;
+  background-color: #e4a01d;
 }
 
 .actions .toggle {
   margin-top: 1rem;
-  background-color: transparent;
-  color: white;
+  background: transparent;
+  color: #e4651d;
   border: none;
   padding: 0.15rem 1.5rem;
 }
 
 .actions .toggle:hover {
   background-color: transparent;
-  color: #864e38;
+  color: #e4651d;
 }
