--- a/src/components/Auth/AuthForm.module.css
+++ b/src/components/Auth/AuthForm.module.css
@@ -40,14 +40,16 @@
 }
 
 .control input {
-  font: inherit;
-  background-color: white;
+  @apply font-mono bg-white border-2 border-gray-300 rounded-sm;
   color: #864e38;
-  border-radius: 4px;
-  border: 1px solid white;
   width: 100%;
   text-align: left;
   padding: 0.25rem;
+}
+
+.control input:focus {
+  @apply outline-none border-2;
+  border-color: #e4651d;
 }
 
 .actions {
