--- a/src/components/StartPage/StartPageContent.module.css
+++ b/src/components/StartPage/StartPageContent.module.css
@@ -67,13 +67,19 @@
   background: #e2b59c;
 }
 
-.controlBody {
-  @apply flex md:justify-end justify-center;
+.actions {
+  @apply flex md:justify-end justify-center mt-6;
 }
 
-.control {
-  @apply md:w-1/12 w-6/12 p-1 m-5;
-  @apply rounded-2xl text-white text-2xl;
+.actions button {
+  @apply min-w-fit m-5;
+  @apply font-mono text-2xl text-white cursor-pointer rounded-md;
+  background: #e4a01d;
+  padding: 0.5rem 1.5rem;
+}
+
+.actions button:hover {
+  color: #864e38;
   background: #e4a01d;
 }
 
