--- a/src/components/StartPage/StartPageContent.module.css
+++ b/src/components/StartPage/StartPageContent.module.css
@@ -48,11 +48,11 @@
 
 .mainItem {
   @apply flex flex-col m-5;
-  @apply bg-white rounded-2xl border-t-4 border-t-amber-600;
+  @apply bg-white rounded-2xl border-t-4 border-t-amber-600  shadow-md shadow-orange-400;
 }
 
 .mainContent h1 {
-  @apply pl-5 md:text-left text-center;
+  @apply pl-5 m-5 md:text-left text-center;
   @apply md:text-6xl text-3xl;
   color: #464544;
 }
@@ -63,7 +63,7 @@
 
 .span {
   @apply w-36 p-1 mb-5 mt-5;
-  @apply text-3xl text-white;
+  @apply text-3xl text-white rounded-sm;
   background: #e2b59c;
 }
 
