[modify]調整配色和諧

--- a/src/components/ForgotPassword/ForgotPasswordForm.module.css
+++ b/src/components/ForgotPassword/ForgotPasswordForm.module.css
@@ -3,7 +3,7 @@
   width: 95%;
   max-width: 25rem;
   border-radius: 6px;
-  background-color: #eebb77;
+  background-color: #c4c4c44d;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   padding: 1rem;
   text-align: center;
@@ -12,7 +12,9 @@
 
 .auth h1 {
   text-align: center;
-  color: white;
+  color: #e4651d;
+  font-size: 3rem;
+  @apply mb-10;
 }
 
 .control {
@@ -20,21 +22,24 @@
 }
 
 .control label {
+  @apply text-left;
   display: block;
-  color: white;
+  color: #464544;
   font-weight: bold;
   margin-bottom: 0.5rem;
 }
 
 .control input {
-  font: inherit;
-  background-color: #c0c0ae;
+  @apply font-mono bg-white border-2 border-gray-300 rounded-sm;
   color: #864e38;
-  border-radius: 4px;
-  border: 1px solid white;
   width: 100%;
   text-align: left;
   padding: 0.25rem;
+}
+
+.control input:focus {
+  @apply outline-none border-2;
+  border-color: #e4651d;
 }
 
 .actions {
@@ -45,30 +50,26 @@
 }
 
 .actions button {
-  cursor: pointer;
-  font: inherit;
-  color: white;
-  background-color: #864e38;
-  border: 1px solid #864e38;
-  border-radius: 4px;
+  @apply font-mono text-2xl text-white cursor-pointer rounded-2xl;
+  background-color: #e4a01d;
   padding: 0.5rem 2.5rem;
 }
 
 .actions button:hover {
   color: #864e38;
-  background-color: #c0c0ae;
-  border-color: #864e38;
+  background-color: #e4a01d;
 }
 
 .actions .toggle {
+  font-size: 1.5rem;
   margin-top: 1rem;
-  background-color: transparent;
-  color: white;
+  background: transparent;
+  color: #e4651d;
   border: none;
   padding: 0.15rem 1.5rem;
 }
 
 .actions .toggle:hover {
   background-color: transparent;
-  color: #864e38;
+  color: #e4651d;
 }
