--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -12,11 +12,14 @@
 .footerMain button {
   @apply mr-5 ml-5;
   font-size: 1rem;
+  @apply border-l-2;
+  border-color: transparent;
 }
 
 .footerMain button:hover {
   color: #ffffff;
   font-size: 1.2rem;
+  @apply border-l-2 border-white;
 }
 
 .content {
