--- a/src/components/CollectionPets/CollectionPets.module.css
+++ b/src/components/CollectionPets/CollectionPets.module.css
@@ -9,12 +9,16 @@
 }
 
 .control {
- @apply flex text-black;
+ @apply flex text-black w-full;
 }
 
 .control a{
-    @apply hover:bg-blue-500 hover:ring-blue-500 hover:shadow-md;
-    @apply rounded-md p-3 bg-white ring-1 ring-gray-200 shadow-sm;
+    @apply rounded-md p-3 ring-1 ring-gray-200 shadow-sm w-full;
+    background: #C2C1C1;
+}
+.control a:hover{
+    @apply ring-blue-500 shadow-md;
+    background: #C2C1C1;
 }
 
 .action li{
@@ -23,6 +27,12 @@
 
 .action a{
     @apply w-full flex flex-col items-center justify-center;
-    @apply hover:border-blue-500 hover:border-solid hover:bg-white hover:text-blue-500 rounded-md border-2 border-dashed border-gray-300 py-3;
+    @apply rounded-md border-2 border-dashed border-gray-300 py-3;
     @apply text-sm leading-6 text-gray-900 font-medium;
+}
+
+.action a:hover{
+    @apply border-solid bg-white;
+    border-color: #e4651d;
+    color: #e4651d;
 }
