[modify]banner邊緣圓角調整方型

--- a/src/components/StartPage/StartPageContent.module.css
+++ b/src/components/StartPage/StartPageContent.module.css
@@ -4,7 +4,7 @@
 
 .banner {
   @apply flex min-w-full justify-center;
-  @apply rounded-b-full bg-white;
+  @apply rounded-b-3xl bg-white;
 }
 
 .content {
