[modify] 關於我們頁面
標題排版
加入一些文字內容

--- a/src/components/AboutPage/AboutPageContent.module.css
+++ b/src/components/AboutPage/AboutPageContent.module.css
@@ -1,3 +1,9 @@
-.btn {
-  @apply block py-2 px-4 text-sm hover:bg-gray-200 text-center;
+
+.contentBody{
+  @apply md:mt-24 mt-12;
 }
+
+.title{
+  @apply flex justify-center;
+}
+
