--- a/src/components/AboutPage/AboutPageContent.module.css
+++ b/src/components/AboutPage/AboutPageContent.module.css
@@ -1,9 +1,28 @@
 
 .contentBody{
-  @apply md:mt-24 mt-12;
+  @apply md:mt-24 mt-12 font-sans;
+  color: #464544;
 }
 
 .title{
-  @apply flex justify-center;
+  @apply flex flex-col justify-items-center items-center;
 }
+
+.summary{
+  @apply flex flex-wrap justify-items-center items-center max-w-[861px];
+  @apply md:mt-24 mt-12 md:mb-24 mb-12;
+}
+
+.summaryImg{
+  @apply md:w-1/2 w-full;
+  @apply bg-gray-300;
+  @apply pr-5 pl-5;
+}
+
+.summary p{
+  @apply md:w-1/2 text-justify;
+  @apply text-2xl pr-5 pl-5;
+}
+
+
 
