--- a/src/components/StartPage/StartPageContent.module.css
+++ b/src/components/StartPage/StartPageContent.module.css
@@ -3,7 +3,7 @@
 }
 
 .banner {
-  @apply flex min-w-full justify-center;
+  @apply flex md:mx-12 mx-1 justify-center;
   @apply rounded-b-3xl bg-white;
 }
 
