--- a/src/components/CollectionPets/CollectionPets.module.css
+++ b/src/components/CollectionPets/CollectionPets.module.css
@@ -1,10 +1,11 @@
-.collection{
 
+.collection{
+    margin: 6rem auto;
 }
 
 .collection ul{
     @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-1 xl:grid-cols-2 gap-4 leading-6;
-    @apply p-4 sm:px-8 sm:pt-6 sm:pb-8 lg:p-4 xl:px-8 xl:pt-6 xl:pb-8;
+    @apply px-6 py-0 sm:px-8 sm:pt-6 sm:pb-8 lg:p-4 xl:px-8 xl:pt-6 xl:pb-8;
     @apply text-sm;
 }
 
