--- a/src/components/Layout/MainNavigation.module.css
+++ b/src/components/Layout/MainNavigation.module.css
@@ -1,5 +1,6 @@
 .header {
-  @apply flex md:mx-12 mx-1 h-20 justify-around;
+  @apply flex md:mx-12 mx-1 h-20 justify-around rounded-b-lg;
+  @apply absolute inset-x-0 top-0;
   @apply bg-white;
 }
 
